--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,121 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  /* IBM Plex Sans Serif */
+  @font-face {
+    font-family: Geist;
+    font-weight: 100 900;
+    font-style: normal;
+    src: url(./assets/fonts/Geist.woff2) format("woff2");
+  }
+  @font-face {
+    font-family: Geist Mono;
+    font-weight: 100 900;
+    font-style: normal;
+    src: url(./assets/fonts/GeistMono.woff2) format("woff2");
+  }
+  @font-face {
+    font-family: FK Display;
+    font-weight: 400;
+    font-style: normal;
+    src: url(./assets/fonts/FKDisplay.otf);
+  }
+  @font-face {
+    font-family: FK Roman Standard;
+    font-weight: 400;
+    font-style: normal;
+    src: url(./assets/fonts/FKRomanStandard/FKRomanStandardTrial-Regular.otf);
+  }
+  font-face {
+    font-family: FK Roman Standard;
+    font-weight: 400;
+    font-style: italic;
+    src: url(./assets/fonts/FKRomanStandard/FKRomanStandardTrial-Oblique.otf);
+  }
+  font-face {
+    font-family: FK Roman Standard;
+    font-weight: 100;
+    font-style: normal;
+    src: url(./assets/fonts/FKRomanStandard/FKRomanStandardTrial-Thin.otf);
+  }
+  font-face {
+    font-family: FK Roman Standard;
+    font-weight: 100;
+    font-style: italic;
+    src: url(./assets/fonts/FKRomanStandard/FKRomanStandardTrial-ThinOblique.otf);
+  }
+  font-face {
+    font-family: FK Roman Standard;
+    font-weight: 500;
+    font-style: normal;
+    src: url(./assets/fonts/FKRomanStandard/FKRomanStandardTrial-Medium.otf);
+  }
+  font-face {
+    font-family: FK Roman Standard;
+    font-weight: 500;
+    font-style: italic;
+    src: url(./assets/fonts/FKRomanStandard/FKRomanStandardTrial-MediumOblique.otf);
+  }
+  font-face {
+    font-family: FK Roman Standard;
+    font-weight: 300;
+    font-style: normal;
+    src: url(./assets/fonts/FKRomanStandard/FKRomanStandardTrial-Light.otf);
+  }
+  font-face {
+    font-family: FK Roman Standard;
+    font-weight: 300;
+    font-style: italic;
+    src: url(./assets/fonts/FKRomanStandard/FKRomanStandardTrial-LightOblique.otf);
+  }
+  font-face {
+    font-family: FK Roman Standard;
+    font-weight: 700;
+    font-style: normal;
+    src: url(./assets/fonts/FKRomanStandard/FKRomanStandardTrial-Bold.otf);
+  }
+  font-face {
+    font-family: FK Roman Standard;
+    font-weight: 700;
+    font-style: italic;
+    src: url(./assets/fonts/FKRomanStandard/FKRomanStandardTrial-BoldOblique.otf);
+  }
+  font-face {
+    font-family: FK Roman Standard;
+    font-weight: 900;
+    font-style: normal;
+    src: url(./assets/fonts/FKRomanStandard/FKRomanStandardTrial-Black.otf);
+  }
+  font-face {
+    font-family: FK Roman Standard;
+    font-weight: 900;
+    font-style: italic;
+    src: url(./assets/fonts/FKRomanStandard/FKRomanStandardTrial-BlackOblique.otf);
+  }
+  font-face {
+    font-family: Chulabhorn Likit Text;
+    font-weight: 300;
+    font-style: normal;
+    src: url(./assets/fonts/ChulabhornLikitText/Chulabhorn_Likit_Text_Light.otf);
+  }
+  font-face {
+    font-family: Chulabhorn Likit Text;
+    font-weight: 400;
+    font-style: normal;
+    src: url(./assets/fonts/ChulabhornLikitText/Chulabhorn_Likit_Text_Regular.otf);
+  }
+  font-face {
+    font-family: Chulabhorn Likit Text;
+    font-weight: 500;
+    font-style: normal;
+    src: url(./assets/fonts/ChulabhornLikitText/Chulabhorn_Likit_Text_Medium.otf);
+  }
+  font-face {
+    font-family: Chulabhorn Likit Text;
+    font-weight: 700;
+    font-style: normal;
+    src: url(./assets/fonts/ChulabhornLikitText/Chulabhorn_Likit_Text_Bold.otf);
+  }
+}
