style: edit typefaces

--- a/src/index.css
+++ b/src/index.css
@@ -95,25 +95,25 @@
     src: url(./assets/fonts/FKRomanStandard/FKRomanStandardTrial-BlackOblique.otf);
   }
   font-face {
-    font-family: Chulabhorn Likit Text;
+    font-family: Chulabhorn Likit;
     font-weight: 300;
     font-style: normal;
     src: url(./assets/fonts/ChulabhornLikitText/Chulabhorn_Likit_Text_Light.otf);
   }
   font-face {
-    font-family: Chulabhorn Likit Text;
+    font-family: Chulabhorn Likit;
     font-weight: 400;
     font-style: normal;
     src: url(./assets/fonts/ChulabhornLikitText/Chulabhorn_Likit_Text_Regular.otf);
   }
   font-face {
-    font-family: Chulabhorn Likit Text;
+    font-family: Chulabhorn Likit;
     font-weight: 500;
     font-style: normal;
     src: url(./assets/fonts/ChulabhornLikitText/Chulabhorn_Likit_Text_Medium.otf);
   }
   font-face {
-    font-family: Chulabhorn Likit Text;
+    font-family: Chulabhorn Likit;
     font-weight: 700;
     font-style: normal;
     src: url(./assets/fonts/ChulabhornLikitText/Chulabhorn_Likit_Text_Bold.otf);
