--- a/src/index.css
+++ b/src/index.css
@@ -3,25 +3,28 @@
 @tailwind utilities;
 
 @layer base {
-  /* IBM Plex Sans Serif */
+  /* Geist */
   @font-face {
     font-family: Geist;
     font-weight: 100 900;
     font-style: normal;
     src: url(./assets/fonts/Geist.woff2) format("woff2");
   }
+  /* Geist Mono*/
   @font-face {
     font-family: Geist Mono;
     font-weight: 100 900;
     font-style: normal;
     src: url(./assets/fonts/GeistMono.woff2) format("woff2");
   }
+  /* FK Display */
   @font-face {
     font-family: FK Display;
     font-weight: 400;
     font-style: normal;
     src: url(./assets/fonts/FKDisplay.otf);
   }
+  /* FK Roman Standard */
   @font-face {
     font-family: FK Roman Standard;
     font-weight: 400;
@@ -94,28 +97,71 @@
     font-style: italic;
     src: url(./assets/fonts/FKRomanStandard/FKRomanStandardTrial-BlackOblique.otf);
   }
-  font-face {
-    font-family: Chulabhorn Likit;
+  /* IBM Plex Sans Thai Looped */
+  @font-face {
+    font-family: IBM Plex Sans Thai Looped;
+    font-weight: 100;
+    src: url(./assets/fonts/IBM-Plex-Sans-Thai-Looped/IBMPlexSansThaiLooped-Thin.woff2)
+      format("woff2");
+  }
+  @font-face {
+    font-family: IBM Plex Sans Thai Looped;
+    font-weight: 200;
+    src: url(./assets/fonts/IBM-Plex-Sans-Thai-Looped/IBMPlexSansThaiLooped-ExtraLight.woff2)
+      format("woff2");
+  }
+  @font-face {
+    font-family: IBM Plex Sans Thai Looped;
     font-weight: 300;
-    font-style: normal;
-    src: url(./assets/fonts/ChulabhornLikitText/Chulabhorn_Likit_Text_Light.otf);
+    src: url(.//assets/fonts/IBM-Plex-Sans-Thai-Looped/IBMPlexSansThaiLooped-Light.woff2)
+      format("woff2");
   }
-  font-face {
-    font-family: Chulabhorn Likit;
+  @font-face {
+    font-family: IBM Plex Sans Thai Looped;
     font-weight: 400;
-    font-style: normal;
-    src: url(./assets/fonts/ChulabhornLikitText/Chulabhorn_Likit_Text_Regular.otf);
+    src: url(./assets/fonts/IBM-Plex-Sans-Thai-Looped/IBMPlexSansThaiLooped-Regular.woff2)
+      format("woff2");
   }
-  font-face {
-    font-family: Chulabhorn Likit;
+  @font-face {
+    font-family: IBM Plex Sans Thai Looped;
     font-weight: 500;
-    font-style: normal;
-    src: url(./assets/fonts/ChulabhornLikitText/Chulabhorn_Likit_Text_Medium.otf);
+    src: url(./assets/fonts/IBM-Plex-Sans-Thai-Looped/IBMPlexSansThaiLooped-Medium.woff2)
+      format("woff2");
   }
-  font-face {
-    font-family: Chulabhorn Likit;
+  @font-face {
+    font-family: IBM Plex Sans Thai Looped;
+    font-weight: 600;
+    src: url(./assets/fonts/IBM-Plex-Sans-Thai-Looped/IBMPlexSansThaiLooped-SemiBold.woff2)
+      format("woff2");
+  }
+  @font-face {
+    font-family: IBM Plex Sans Thai Looped;
     font-weight: 700;
-    font-style: normal;
-    src: url(./assets/fonts/ChulabhornLikitText/Chulabhorn_Likit_Text_Bold.otf);
+    src: url(./assets/fonts/IBM-Plex-Sans-Thai-Looped/IBMPlexSansThaiLooped-Bold.woff2)
+      format("woff2");
+  }
+  /* IBM Plex Sans JP */
+  @font-face {
+    font-family: IBM Plex Sans JP;
+    font-weight: 400;
+    src: url(./assets/fonts/IBMPlexSansJP-Regular.woff2) format("woff2");
+  }
+  /* IBM Plex Sans KR */
+  @font-face {
+    font-family: IBM Plex Sans KR;
+    font-weight: 400;
+    src: url(./assets/fonts/IBMPlexSansKR-Regular.woff2) format("woff2");
+  }
+  /* Noto Sans TC */
+  @font-face {
+    font-family: Noto Sans TC;
+    font-weight: 400;
+    src: url(./assets/fonts/Noto_Sans_TC_Thin.ttf);
+  }
+  /* Noto Sans SC */
+  @font-face {
+    font-family: Noto Sans SC;
+    font-weight: 400;
+    src: url(./assets/fonts/Noto_Sans_SC_Thin.ttf);
   }
 }
